--- a/YoutubeApp/style/style.css
+++ b/YoutubeApp/style/style.css
@@ -1,5 +1,13 @@
+/* Drawer Close Icon */
+.parent-span svg {
+    transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+    fill: #ffffff !important;
+  }
+
+  /* Youtube Player */
 .search-bar {
-    margin: 20px;
+    margin-top: 100px;
+    margin-bottom: 50px;
     text-align: center;
 }
 
