--- a/YoutubeApp/style/style.css
+++ b/YoutubeApp/style/style.css
@@ -1,3 +1,7 @@
+body {
+    background-color: #fafafa !important;
+}
+
 /* Drawer Close Icon */
 .parent-span svg {
     transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
