Implemented a variables and content files

--- a/TinderApp/style/style.css
+++ b/TinderApp/style/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 /* Drawer Background */
-.Navigation-drawerPaper-7 {
+.MatAppBar-drawerPaper-7 {
     background-color: #ecf0f1 !important;
 }
 
