--- a/YoutubeApp/css/style.css
+++ b/YoutubeApp/css/style.css
@@ -1,14 +1,18 @@
 body {
-    background-color: #fafafa !important;
+    background-color: #ecf0f1 !important;
 }
 
-/* Drawer Close Icon */
-.parent-span svg {
-    transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
-    fill: #ffffff !important;
-  }
+.version {
+    margin-right: auto;
+    margin-left: 16px;
+}
 
-  /* Youtube Player */
+/* Drawer Background */
+.MatAppBar-drawerPaper-7 {
+    background-color: #ecf0f1 !important;
+}
+
+/* Youtube Player */
 .search-bar {
     margin-top: 100px;
     margin-bottom: 50px;
@@ -23,6 +27,10 @@ body {
     max-width: 64px;
 }
 
+.video-detail {
+    padding-bottom: 10px !important;
+}
+
 .video-detail .details {
     margin-top: 10px;
     padding: 10px;
@@ -30,7 +38,13 @@ body {
     border-radius: 4px;
 }
 
+.list-group {
+    padding-left: 15px !important;
+    padding-bottom: 15px !important;
+}
+
 .list-group-item {
+    padding: 10px !important;
     cursor: pointer;
 }
 
